# sd_hw1_cli

./: README.md  hw1_cli.drawio  pyproject.toml
.github/workflows/: CI.yaml
cli_interpretator/: cli_interpreter.py  command.py  commands.py  executor.py  parser.py  repl.py
cli_interpretator/commands/: cat_command.py  command.py  echo_command.py  exit_command.py  pwd_command.py  unknown_command.py  wc_command.py
cli_interpreter/: cli_interpreter.py  cli_repl.py  commands.py  context.py  executor.py  parser.py
cli_interpreter/commands/: assign_command.py  cat_command.py  cd_command.py  command.py  echo_command.py  exit_command.py  grep_command.py  ls_command.py  pwd_command.py  unknown_command.py  wc_command.py
docs/: class_schema.puml
tests/: file with spaces.sh  test_assign_command.py  test_cat_command.py  test_cd.py  test_cli_interpreter.py  test_cli_repl.py  test_commands.py  test_context.py  test_echo_command.py  test_errors_handling.py  test_exit_command.py  test_grep.py  test_ls_command.py  test_parser.py  test_pwd_command.py  test_quoting.py  test_unknown_command.py  test_wc_command.py
